// Copyright (c) 2018 Catena cyber
// Author Philippe Antoine <p.antoine@catenacyber.fr>
// Describing the messages for catenasup

syntax = "proto3";

package catenaSUP;

service CatenaUserPass {
    rpc AddUser (UserPass) returns (Id) {}
    rpc ChangePass (UserPass) returns (Empty) {}
    rpc CheckUserPass (UserPass) returns (Id) {}
    rpc DeleteUser (User) returns (Empty) {}
    //TODO ImportTable
}

message UserPass {
    string user = 1;
    string pass = 2;
}

message User {
    string user = 1;
}

message Empty {
}

message Id {
    uint64 id = 1;
}
